# pq

./: Procfile  README.md  apps.code-workspace  docker-compose.yml  heroku.yml
.github/workflows/: .deploy.yaml  build.yaml  build.yml  integration.yaml  lint.yaml  test.yaml
.infra/: envoy.local.yaml  envoy.yaml
apps/: README.md
apps/client/: .prettierrc  Dockerfile  jest.config.js  package.json  tsconfig.json
apps/client/scripts/: wait-for-it.sh
apps/client/src/: constants.ts
apps/qb/: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  run.py  setup.cfg
apps/qb/app/: config.py  gmail.py  main.py
apps/qb/app/init/: database.py  queue.py
apps/qb/app/models/: answer_bank.py  game.py  question.py
apps/qb/app/routers/: game_router.py  status_router.py
apps/qb/app/services/: answer_bank_service.py  game_service.py  question_service.py
apps/qb/app/utils/: decorators.py  logger.py
apps/qb/db/: env.py
apps/qb/db/versions/: 05cc08bb283f_games_and_questions.py  3692275abc73_games_and_questions.py  4ece8aa41dfe_answer_bank_foreign_key_relationship.py  54e7ffa940de_answr_bank_display_name_and_id_fix.py  989b989bf0ca_answer_bank.py  c2cee10e456e_game_is_started.py
apps/qb/src/: config.py
apps/qb/src/models/: question.py
apps/qb/src/routers/: __init__.py  game_router.py  question_router.py
apps/qb/src/services/: game_service.py
apps/streaming/: .gitignore  Dockerfile  Makefile  go.mod  go.sum
apps/streaming/cmd/: main.go
apps/streaming/pkg/: app.go  broadcast.go  broadcast_test.go  connection.go
docs/: README.md  broadcasting.md
protos/: Makefile  README.md
protos/question_bank/: Question.proto  QuestionOption.proto
protos/streaming/: Broadcast.proto
protos/user/: User.proto
(+104 files in other folders)
