[tool.poetry]
name = "qb"
version = "0.1.0"
description = "question bank for trivia app"
authors = ["Roger King <rogr.king@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.20"
alembic = "^1.4.3"
fastapi = "^0.62.0"
uvicorn = "^0.13.0"
pydantic = "^1.7.3"
email-validator = "^1.1.2"
pika = "^1.1.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-black = "^0.2.1"
flake8-variables-names = "^0.0.3"
flake8-functions = "^0.0.4"
flake8-eradicate = "^1.0.0"
flake8-comprehensions = "^3.3.0"
flake8-bugbear = "^20.11.1"
flake8-bandit = "^2.1.2"
pytest = "^6.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
